<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/ip_address"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxStrokeColor="@color/design_default_color_primary_variant"
                app:endIconMode="clear_text"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtIpAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:text="172.20.10.2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/port"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxStrokeColor="@color/design_default_color_primary_variant"
                app:endIconMode="clear_text"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRpcPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="8181" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/rpc_username"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxStrokeColor="@color/design_default_color_primary_variant"
                app:endIconMode="clear_text"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRpcUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="user3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/rpc_password"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxStrokeColor="@color/design_default_color_primary_variant"
                app:endIconMode="password_toggle"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRpcPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="password3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/raw_tx_hex"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxStrokeColor="@color/design_default_color_primary_variant"
                app:endIconMode="clear_text"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRawTxHex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="02000000000101bbfc1908d84fb5633470010251f743adb605ea69f8682a5f5b5d373e2f5c8bd30000000000fdffffff02d885010000000000160014cf2dec30e06f6ce36160da496f467608e519d312a0860100000000001600141de39114d75b1e98fd6d92563ce419bc0c1614430247304402202321361ff6e2b1418bdc3a91b3bab04f91b069b017a3673cd33c57396f371acc0220017573aa9774e027d9dceb2abd8a9e6b887d3600fb2d4c8fcc7ddadd001c3f56012102231922b86ab2225a1f0306aa2398bbaf6cc4ba92349a7138bcede7bcd09e145cf8fb1c00" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/success_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:text="@string/broadcast" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/response"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/response_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
